Increase bottom padding of header to ensure domain label doesn't overlap attachment content

--- a/extensions/amp-story/1.0/amp-story-draggable-drawer-header.css
+++ b/extensions/amp-story/1.0/amp-story-draggable-drawer-header.css
@@ -24,7 +24,7 @@
 
 .i-amphtml-story-draggable-drawer-header.i-amphtml-story-page-attachment-with-form {
   /* Additional space upon which the domain label can appear in an absolute position. */
-  padding-bottom: 35px !important;
+  padding-bottom: 40px !important;
 }
 
 /* Draggable handle UI */
